<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * Copyright (c) 2013 Mobile Acuity Ltd. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/configure_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:src="@drawable/mobileacuity" />

    <TextView
        android:id="@+id/configure_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/configure_heading"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <TextView android:id="@+id/configure_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_instruction" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
		<TextView
		    android:id="@+id/configure_url"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:ellipsize="start"
		    android:singleLine="true"
		    android:text="@string/configure_url" />
		
		<EditText
		    android:id="@+id/configure_edit_service"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:ems="10"
		    android:singleLine="true" >

		    <requestFocus />
		</EditText>
	</LinearLayout>
	
	<CheckBox
	    android:id="@+id/configure_follow"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/configure_follow" />
	
	<Button
	    android:id="@+id/configure_ok"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/configure_ok" />
		
</LinearLayout>
		